tests/ui/impl-trait/inference/in-defining-item/reveal-hidden-via-wrapped-receiver.old.stderr
error[E0308]: mismatched types
  --> $DIR/reveal-hidden-via-wrapped-receiver.rs:26:20
   |
LL |     let _: WShow = W(test(!n)).show();
   |            -----   ^^^^^^^^^^^^^^^^^^ expected `WShow`, found `OnWShow`
   |            |
   |            expected due to this

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
